# chalice-dymano

./: README.md
json-to-dynamo/: main.py  pyproject.toml
json-to-dynamo/tests/: test_json_to_dynamo.py
token-api/: app.py  pyproject.toml
token-api/.chalice/: config.json
token-api/tests/: test_token_api.py
